# ChaosPilot

./: .dockerignore  .env.template  .gcloudignore  .gitignore  ADK_TESTING_GUIDE.md  ARCHITECTURE.md  BLOG.md  Dockerfile  HOW_IT_WORKS.md  POST.md  QUICK_START.md  README.md  STACKS.md  STORY.md  adk_events_1000.json  agent_Manager_data.db  doc.md  inject_dummy_erro_logs.py  inject_logs.py  main.py  makefile  package-lock.json  pyproject.toml  requirements.txt  sessions.db  start_chaospilot.bat  start_chaospilot.sh  test_adk_integration.py  xREADME.md
.github/workflows/: vercel-deploy.yml
agent_manager/: agent.py  config.py  models.py
agent_manager/sub_agents/action_recommender/: agent.py
agent_manager/sub_agents/detector/: agent.py
agent_manager/sub_agents/fixer/: agent.py
agent_manager/sub_agents/notifier/: agent.py
agent_manager/sub_agents/planner/: agent.py
docs/: GCP_SETUP.md
docs/how-i-implemented-this/: HOW_TO_RUN_AND_DEPLOY_THE_APPLICATION.md  HOW_TO_RUN_THE_APPLICATION.md  STEP-1.md
docs/setup-and-deployment/: ADK_INTEGRATION_README.md  HOW_TO_RUN_AND_DEPLOY_THE_APPLICATION.md
frontend/: README.md  SUPABASE_SETUP.md  angular.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/app-shell/: app-shell.component.html  app-shell.component.ts
frontend/src/app/components/autonomous-monitor/: autonomous-monitor.component.ts
frontend/src/app/components/chat/: chat.component.html  (+2 more)
frontend/src/app/guards/: auth.guard.ts  public.guard.ts
frontend/src/app/pipes/: markdown.pipe.ts
frontend/src/app/services/: adk-interfaces.ts  agent.service.ts  ai-state.service.spec.ts  ai-state.service.ts  chat.service.ts  feedback.service.ts  google-adk.service.ts  session.service.ts  supabase.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
manager/: agent.py
manager/sub_agents/action_recommender/: agent.py
manager/sub_agents/detector/: agent.py
manager/sub_agents/fixer/: agent.py
manager/sub_agents/notifier/: agent.py
manager/sub_agents/planner/: agent.py
mcp-toolbox/: tools.yaml
mcp-toolbox/logger-data/: database.db  logger-db.sql
scripts/: README.md  assign_iam_roles.bat  assign_iam_roles.sh  inject_logs_gcp.py  run-all.bat  run-all.sh  setup-toolbox-service-account.bat  setup-toolbox-service-account.sh  start_chaospilot.bat  start_chaospilot.sh
(+19 files in other folders)
