[project]
name = "chaos-pilot"
version = "0.1.0"
description = "Autonomous DevOps Agent using Google ADK"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Philip Mutua", email = "pmutua@live.com" },
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-adk==1.3.0",
    "google-cloud-logging==3.12.1",
    "google-cloud-bigquery==3.34.0",
    "google-cloud-aiplatform==1.44.0",
    "google-generativeai==0.4.1",
    "litellm==1.72.7",
    "toolbox-core==0.2.1",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy~=1.15.0",
    "codespell~=2.2.0",
    "types-pyyaml~=6.0.12.20240917",
    "types-requests~=2.32.0.20240914",
]